--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -6,13 +6,13 @@
 #    By: pcervill <pcervill@student.42madrid.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/23 17:01:13 by pcervill          #+#    #+#              #
-#    Updated: 2024/09/23 17:01:16 by pcervill         ###   ########.fr        #
+#    Updated: 2024/09/25 17:15:52 by pcervill         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= zombieHorde
+NAME	= Harl
 
-SRC		= main.cpp newZombie.cpp Zombie.cpp randomChump.cpp zombieHorde.cpp
+SRC		= main.cpp Harl.cpp
 
 SRC_DIR	= ./src/
 
@@ -20,7 +20,7 @@ OBJ		= $(addprefix $(SRC_DIR), $(SRC:.cpp=.o))
 
 CC		= clang++
 
-CFLAGS	= -Wall -Wextra -Werror -g -fsanitize=address -g3 -std=c++98
+CFLAGS	= -Wall -Wextra -Werror -std=c++98 -g #-fsanitize=address -g3
 
 %.o: %.cpp
 	@$(CC) $(CFLAGS) -c $< -o $@
